Update Progetto Gruppo 2.ipynb

--- a/VSR project work/Progetto Gruppo 2.ipynb
+++ b/VSR project work/Progetto Gruppo 2.ipynb
@@ -357,9 +357,9 @@
    "source": [
     "# Learning Rate variabile\n",
     "Ha senso usare uno schedule del learning rate in modo da avere una rete che segue più step\n",
-    "- **Step 1** learning rate alto per un adattamento rapido\n",
-    "- **Step 2** learning rate più basso per stabilizzazione\n",
-    "- **Step 3** learning rate ancora più basso per finalizzazione"
+    "- **Step 1:** learning rate alto per un adattamento rapido\n",
+    "- **Step 2:** learning rate più basso per stabilizzazione\n",
+    "- **Step 3:** learning rate ancora più basso per finalizzazione"
    ]
   },
   {
